updated skills and experience

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li><a href="#" data-toggle="modal" data-target="#education" class="w3ls-hover"><span data-letters="Education">Education </span></a></li>
 						<li><a href="#" data-toggle="modal" data-target="#work" class="w3ls-hover"><span data-letters="Work">Play</span></a></li>
 						<li><a href="#" data-toggle="modal" data-target="#contact" class="w3ls-hover"><span data-letters="Contact">Contact </span></a></li> 
-						<li><a class="w3ls-icon" href="#"><span class="glyphicon glyphicon-save"></span></a></li> 
+						<li><a href="./csaund_resume.pdf" data-toggle="modal" class="w3ls-hover"><span data-letters="Resume">Resume </span></a></li>
+						<!--<li><a class="w3ls-icon" href="./csaund_resume.pdf"><span class="glyphicon glyphicon-save"></span></a></li>-->
 					</ul>
 					<div class="clearfix"> </div>
 				</div>
@@ -135,50 +136,52 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="skills"> 
 						<div class="col-md-6 bar-grids">
 							<h4><span class="glyphicon glyphicon-cog"></span> Technical Skills </h4>
-							<h6>web design  <span> 80% </span></h6>
-							<div class="progress">
-								<div class="progress-bar progress-bar-striped active" style="width: 80%">
-								</div>
-							</div>
-							<h6>ui design & developer <span> 70% </span></h6>
-							<div class="progress  w3-agile">
-								<div class="progress-bar progress-bar-striped active" style="width: 70%">
-								</div>
-							</div>
+							<h6>The Thing  <span> The Confidence </span></h6>
+                            <br>
+                            <h6><b>Languages</b></h6>
 							<h6>Javascript<span>90% </span></h6>
-							<div class="progress  w3-agile">
-								<div class="progress-bar progress-bar-striped active" style="width: 90%">
-								</div>
-							</div>
-							<h6>Photoshop <span> 75% </span></h6>
-							<div class="progress  w3-agile">
-								<div class="progress-bar progress-bar-striped active" style="width: 75%">
-								</div>
-							</div>
-						</div> 
+							<h6>Python<span>70% </span></h6>
+							<h6>C/C++<span>60% </span></h6>
+							<h6>LISP<span>45% </span></h6>
+							<h6>Golang<span>30% </span></h6>
+                            <br>
+                            <h6><b>Frameworks</b></h6>
+                            <h6>NodeJS<span>85% </span></h6>
+                            <h6>React<span>60% </span></h6>
+                            <br>
+                            <h6><b>Workflow</b></h6>
+                            <h6>Git<span>90% </span></h6>
+                            <h6>Jenkins<span>65% </span></h6>
+                            <h6>SVN<span>40% </span></h6>
+                            <h6>hadoop/mapreduce<span>20% </span></h6>
+						</div>
 						<div class="col-md-6 bar-grids  w3-agile">
 							<h4><span class="glyphicon glyphicon-briefcase"></span> Professional Skills </h4>
-							<h6>Communication<span> 85% </span></h6>
-							<div class="progress">
-								<div class="progress-bar progress-bar-striped active" style="width: 85%">
-								</div>
-							</div>
-							<h6>Social media marketing<span> 95% </span></h6>
-							<div class="progress">
-								<div class="progress-bar progress-bar-striped active" style="width: 95%">
-								</div>
-							</div>
-							<h6>Leadership<span>90% </span></h6>
-							<div class="progress">
-								<div class="progress-bar progress-bar-striped active" style="width: 90%">
-								</div>
-							</div>
-							<h6>Confidence<span>86% </span></h6>
-							<div class="progress prgs-w3agile-last">
-								<div class="progress-bar progress-bar-striped active" style="width: 86%">
-								</div>
-							</div> 
+							<h6><b>Communication</b><span> 85% </span></h6>
+                            <p>Regularly act as inter-team communicator (Jibo)</p>
+                            <p>Created and advocated for formal Lunch and Learn implementation. (Jibo)</p>
+                            <p>Participate in Product and Business Management Book Group</p>
+                            <br>
+                            <h6><b>Leadership</b><span>90% </span></h6>
+                            <p>Won First Bi-Annual Company Culture Award (Jibo)</p>
+                            <br>
+							<h6><b>Public Speaking and Appearances</b><span> 95% </span></h6>
+                            <p>Appeared at 10+ public developer events (Jibo)</p>
+                            <p>Appear in many developer Promo Videos (Jibo)</p>
+                            <p>Write for Developer Blog (Jibo)</p>
+                            <br>
+							<h6><b>Community Service</b><span>86% </span></h6>
+                            <p>Present instructor for Girls Who Code</p>
+                            <p>Ran the Women in Computer Science chapter (Tufts University)</p>
+                            <p>Girl Scouts of America Gold Award (it's an Eagle Scout, for girls)</p>
 						</div>
+                        <div class="col-md-12 bar-grids  w3-agile">
+                            <h4>Testimonies</h4>
+                            <p>"Nobody else I would rather work with on your team. Or any team, ever." <br><b>Michael James, Friend and Student Peer</b></p>
+                            <p>"You have this keen ability to see so far beyond the scope of the current problem, and still so clearly address the current problem." <br><b>Carla Brodley, Dean of Computer Science, Northeastern University</b></p>
+                            <p>"There is no doubt in my mind you are destined for great things." <br><b>Steve Chambers, CEO, Jibo</b></p>
+                            <p>"Once you see this pull request you will learn why hurricanes are named after people" <br><b>sorry guys this one was me</b></p>
+                        </div>
 						<div class="clearfix"> </div>	
 					</div>
 				</div> 
@@ -203,29 +206,29 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 							<div class="experience-right">
 								<h4>Robot SDK Developer</h4>
-								<p>Early employee of Jibo, Inc. Implemented and Architected major backend system to allow Jibo Skills to run within electron contexts on platform. Regularly work across teams for new initiatives. Won first company Culture Award.</p>
+								<p>In first 25 employees of Jibo, Inc. Implemented and Architected major backend system to allow Jibo Skills to run within electron contexts on platform. Regularly work across teams for new initiatives. Won first company Culture Award.</p>
 							</div>
 							<div class="clearfix"> </div>
 						</div> 
 						<div class="experience-grids experience-grids-btm">
 							<div class="experience-left">
 								<h3>2013 - 2014</h3>
-								<h5>Company Name </h5>
+								<h5>Spotify </h5>
 							</div>
 							<div class="experience-right">
-								<h4>Graphic Designer</h4>
-								<p>Itaque earum rerum hic tenetur a sapiente delectus reiciendis maiores alias Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rutrum iaculis enim, non convallis felis mattis at</p>
+								<h4>Software Development Intern</h4>
+								<p>Developed web tools to test new song recommendation algorithms and worked on team to develop new song similarity machine learning algorithms.</p>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
 						<div class="experience-grids w3-agileits">
 							<div class="experience-left">
-								<h3>2011 - 2013</h3>
-								<h5>Company Name </h5>
+								<h3>2011 - 2015</h3>
+								<h5>Tufts University </h5>
 							</div>
 							<div class="experience-right">
-								<h4>Web Designer & Developer</h4>
-								<p>Itaque earum rerum hic tenetur a sapiente delectus reiciendis maiores alias Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rutrum iaculis enim, non convallis felis mattis at</p>
+								<h4>Teaching and Research Assistant</h4>
+								<p>TA for CS courses: Introductory, Data Structures, Assembly Language Programming, and Machine Learning. RA for Tufts Biomedical Engineering Department.</p>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
