please let this get rid of that ugly font

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script src="js/jquery-2.2.3.min.js"></script> 
 <!-- //js -->
 <!-- web-fonts -->
-<link href='//fonts.googleapis.com/css?family=Text+Me+One' rel='stylesheet' type='text/css'>
+<!--<link href='//fonts.googleapis.com/css?family=Text+Me+One' rel='stylesheet' type='text/css'>-->
 <link href='//fonts.googleapis.com/css?family=Roboto+Condensed:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
 <!-- //web-fonts --> 
 </head>
@@ -82,7 +82,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<img src="images/headshot.jpg" class="img-responsive" alt=""/>
 						</div>
 						<div class="col-md-8 about-right wthree">
-							<h3>Hello yes this is <span>Carolyn M. Saund</span></h3>
+							<h3>Hello, I'm <span>Carolyn M. Saund</span></h3>
 							<h4>a.k.a. Caro </h4>
 							<ul class="address">
 								<li>
@@ -116,7 +116,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<p> I recieved my B.S. in Computer Science and Cognitive
 							and Brain Sciences from Tufts University in May 2015. My main focus in both areas of study has primarily been <b>Machine Learning</b> and <b>Artificial Intelligence</b>, which I intend to continue in graduate studies. <br></p>
 							<p class="agile-br">I am motivated by passion. Whatever the task, being surrounded by passionate people brings out my most inspired and creative work. I love working in teams small enough to personally interact with each member every day, and take as easily to leading a project I care about as I do to following a team lead's vision.<br></p>
-							<p class="agile-br">I have also been described as an avid world traveller. For more about who I am and how I fill my time, check out what I <b>do</b> and <b>where</b> I've been up above.</p>
+							<p class="agile-br">I have also been described as an avid world traveller. For more about who I am and how I fill my time, check out how I <b>play</b> up above.</p>
 						</div>
 					</div>
 				</div> 
