--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="modal-body modal-spa">
 					<div class="about"> 
 						<div class="col-md-4 about-left ">
-							<img src="images/headshot.jpg" class="img-responsive" alt=""/>
+							<img src="images/japan_bamboo.jpg" class="img-responsive" alt=""/>
 						</div>
 						<div class="col-md-8 about-right wthree">
 							<h3>Hello, I'm <span>Carolyn M. Saund</span></h3>
