removed commented font, changed wording

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script src="js/jquery-2.2.3.min.js"></script> 
 <!-- //js -->
 <!-- web-fonts -->
-<!--<link href='//fonts.googleapis.com/css?family=Text+Me+One' rel='stylesheet' type='text/css'>-->
 <link href='//fonts.googleapis.com/css?family=Roboto+Condensed:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
 <!-- //web-fonts --> 
 </head>
@@ -166,8 +165,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <p>Won First Bi-Annual Company Culture Award (Jibo)</p>
                             <br>
 							<h6><b>Public Speaking and Appearances</b><span> 95% </span></h6>
-                            <p>Appeared at 10+ public developer events (Jibo)</p>
-                            <p>Appear in many developer Promo Videos (Jibo)</p>
+                            <p>Presented Appeared at 10+ public developer events (Jibo)</p>
+                            <p>Appear in many developer Promo Videos and Interviews (Jibo)</p>
                             <p>Write for Developer Blog (Jibo)</p>
                             <br>
 							<h6><b>Community Service</b><span>86% </span></h6>
