added to skills

--- a/index.html
+++ b/index.html
@@ -150,9 +150,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <br>
                             <h6><b>Workflow</b></h6>
                             <h6>Git<span>90% </span></h6>
+                            <h6>Unix/Linux<span>90% </span></h6>
                             <h6>Jenkins<span>65% </span></h6>
                             <h6>SVN<span>40% </span></h6>
-                            <h6>hadoop/mapreduce<span>20% </span></h6>
+							<br>
+							<h6><b>Theories*</b></h6>
+							<h6>Computational Neural Networks (MLPs)<span>90% </span></h6>
+							<h6>Cognitive Emotional Theory<span>65% </span></h6>
+							<h6>SVN<span>40% </span></h6>
+							<h6>hadoop/mapreduce<span>20% </span></h6>
+							<h6>*"confidence" can only be relative to the confidence of the theory in the field.</h6>
 						</div>
 						<div class="col-md-6 bar-grids  w3-agile">
 							<h4><span class="glyphicon glyphicon-briefcase"></span> Professional Skills </h4>
