--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <p>Won First Bi-Annual Company Culture Award (Jibo)</p>
                             <br>
 							<h6><b>Public Speaking and Appearances</b><span> 95% </span></h6>
-                            <p>Presented Appeared at 10+ public developer events (Jibo)</p>
+							<p>Many (20+) public presentations, lectures, and workshops on Jibo SDK and social robotics.</p>
                             <p>Appear in many developer Promo Videos and Interviews (Jibo)</p>
                             <p>Write for Developer Blog (Jibo)</p>
                             <br>
@@ -301,10 +301,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="gallery-row">
 							<div class="col-md-4 gallery-grids">
 								<div class="gallery-w3ls-hover">
-									<a href="images/g1.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley">
-										<img src="images/g1.jpg" class="img-responsive zoom-img" alt=""/>
+									<a href="slideshows/thainam.html" data-lightbox="example-set" data-title="I like backpacking.">
+										<img src="slideshows/img/vietnam/halongsunsetsmall.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>View+</h5>
+											<h5>Thailand and Vietnam</h5>
 										</div>
 									</a>
 								</div>
@@ -314,7 +314,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<a href="images/g2.jpg" data-lightbox="example-set" data-title="Sed ut perspiciatis unde omnis iste natus error sit">
 										<img src="images/g2.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>View+</h5>
+											<h5>Japan</h5>
 										</div>
 									</a>
 								</div>
@@ -324,7 +324,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<a href="images/g3.jpg" data-lightbox="example-set" data-title="Eaque ipsa quae ab illo inventore veritatis et quasi">
 										<img src="images/g3.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>View+</h5>
+											<h5>New Zealand</h5>
 										</div>
 									</a>
 								</div>
@@ -334,7 +334,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<a href="images/g4.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley">
 										<img src="images/g4.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>View+</h5>
+											<h5>Belize</h5>
 										</div>
 									</a>
 								</div>
@@ -344,7 +344,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<a href="images/g5.jpg" data-lightbox="example-set" data-title="Sed ut perspiciatis unde omnis iste natus error sit">
 										<img src="images/g5.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>View+</h5>
+											<h5>Montreal</h5>
 										</div>
 									</a>
 								</div>
@@ -354,7 +354,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<a href="images/g6.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley">
 										<img src="images/g6.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>View+</h5>
+											<h5>Ireland</h5>
 										</div>
 									</a>
 								</div>
@@ -364,7 +364,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<a href="images/g3.jpg" data-lightbox="example-set" data-title="Sed ut perspiciatis unde omnis iste natus error sit">
 										<img src="images/g3.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>View+</h5>
+											<h5>Iceland</h5>
 										</div>
 									</a>
 								</div>
@@ -374,7 +374,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<a href="images/g1.jpg" data-lightbox="example-set" data-title="Eaque ipsa quae ab illo inventore veritatis et quasi">
 										<img src="images/g1.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>View+</h5>
+											<h5>---</h5>
 										</div>
 									</a>
 								</div>
@@ -384,7 +384,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<a href="images/g2.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley">
 										<img src="images/g2.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>View+</h5>
+											<h5>---</h5>
 										</div>
 									</a>
 								</div>
