--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- //top-nav -->
 	
 	<!-- banner --> 
-	<div class="video" data-vide-bg="">
+	<div class="background" data-vide-bg="">
 		<div class="container">
 			<div class="banner-text agileinfo-text">  
 				<h1>Carolyn M. Saund</h1>
@@ -164,7 +164,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="col-md-6 bar-grids  w3-agile">
 							<h4><span class="glyphicon glyphicon-briefcase"></span> Professional Skills </h4>
 							<h6><b>Communication</b><span> 85% </span></h6>
-                            <p>Regularly act as inter-team communicator (Jibo)</p>
+                            <p>Team communicator across and to upper management (Jibo)</p>
                             <p>Created and advocated for formal Lunch and Learn implementation. (Jibo)</p>
                             <p>Participate in Product and Business Management Book Group</p>
                             <br>
