--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li><a href="#" data-toggle="modal" data-target="#skill" class="w3ls-hover"><span data-letters="Skills">Skills</span></a></li>
 						<li><a href="#" data-toggle="modal" data-target="#experience" class="w3ls-hover"><span data-letters="Experience">Experience </span></a></li>
 						<li><a href="#" data-toggle="modal" data-target="#education" class="w3ls-hover"><span data-letters="Education">Education </span></a></li>
-						<li><a href="#" data-toggle="modal" data-target="#work" class="w3ls-hover"><span data-letters="Work">Play</span></a></li>
+						<li><a href="#" data-toggle="modal" data-target="#work" class="w3ls-hover"><span data-letters="Play">Play</span></a></li>
 						<li><a href="#" data-toggle="modal" data-target="#contact" class="w3ls-hover"><span data-letters="Contact">Contact </span></a></li> 
 						<li><a href="./csaund_resume.pdf" data-toggle="modal" class="w3ls-hover"><span data-letters="Resume">Resume </span></a></li>
 						<!--<li><a class="w3ls-icon" href="./csaund_resume.pdf"><span class="glyphicon glyphicon-save"></span></a></li>-->
@@ -93,7 +93,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<li>
 									<ul class="agileits-address-text">
 										<li><b>ADDRESS </b></li>
-										<li>44 Union Street, Cambridge, MA</li>
+										<li>21 Saint Mary Road, Cambridge, MA</li>
 									</ul>
 								</li>
 								<li>
@@ -105,7 +105,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<li>
 									<ul class="agileits-address-text">
 										<li><b>RESUME </b></li>
-										<li><a href="./csaund_resume.pdf">it's my resume!</a></li>
+										<li><a href="./csaund_resume.pdf">find it here</a></li>
 									</ul>
 								</li>
 							</ul> 
@@ -147,6 +147,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <h6><b>Frameworks</b></h6>
                             <h6>NodeJS<span>85% </span></h6>
                             <h6>React<span>60% </span></h6>
+							<h6>hadoop/mapreduce<span>20% </span></h6>
                             <br>
                             <h6><b>Workflow</b></h6>
                             <h6>Git<span>90% </span></h6>
@@ -157,9 +158,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<h6><b>Theories*</b></h6>
 							<h6>Computational Neural Networks (MLPs)<span>90% </span></h6>
 							<h6>Cognitive Emotional Theory<span>65% </span></h6>
-							<h6>SVN<span>40% </span></h6>
-							<h6>hadoop/mapreduce<span>20% </span></h6>
-							<h6>*"confidence" can only be relative to the confidence of the theory in the field.</h6>
 						</div>
 						<div class="col-md-6 bar-grids  w3-agile">
 							<h4><span class="glyphicon glyphicon-briefcase"></span> Professional Skills </h4>
@@ -186,7 +184,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <p>"Nobody else I would rather work with on your team. Or any team, ever." <br><b>Michael James, Friend and Student Peer</b></p>
                             <p>"You have this keen ability to see so far beyond the scope of the current problem, and still so clearly address the current problem." <br><b>Carla Brodley, Dean of Computer Science, Northeastern University</b></p>
                             <p>"There is no doubt in my mind you are destined for great things." <br><b>Steve Chambers, CEO, Jibo</b></p>
-                            <p>"Once you see this pull request you will learn why hurricanes are named after people" <br><b>sorry guys this one was me</b></p>
+                            <p>"Once you see this pull request you will learn why hurricanes are named after people" <br><b>Me</b></p>
                         </div>
 						<div class="clearfix"> </div>	
 					</div>
@@ -204,10 +202,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<h4 class="modal-title">My Experience</h4>
 				</div>
 				<div class="modal-body modal-spa">
-					<div class="experience w3-agileits-info">  
-						<div class="experience-grids">
+					<div class="experience w3-agileits-info">
+                        <div class="experience-grids">
+                            <div class="experience-left">
+                                <h3>2017 - Now</h3>
+                                <h5>Jibo Inc.</h5>
+                            </div>
+                            <div class="experience-right">
+                                <h4>Character AI Developer</h4>
+                                <p>Built Jibo's Emotional System. Designed and built SDK listening pipeline.</p>
+                            </div>
+                            <div class="clearfix"> </div>
+                        </div>
+                        <div class="experience-grids">
 							<div class="experience-left">
-								<h3>2015 - Now</h3>
+								<h3>May 2015 - Dec 2016</h3>
 								<h5>Jibo Inc.</h5>
 							</div>
 							<div class="experience-right">
