--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div class="background" data-vide-bg="">
 		<div class="container">
 			<div class="banner-text agileinfo-text">  
-				<h1>Carolyn M. Saund</h1>
-				<h6>Software Developer</h6>
-				<h6>For Robots and Other Cool Things</h6>
+				<h1>Carolyn Saund</h1>
+				<h6>Software Engineer</h6>
+				<h6>Emotional Programmer</h6>
+				<h6>Guacamole Enthusiast</h6>
 			</div>
 		</div>	
 	</div>	
@@ -456,16 +457,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 	</div>
 	<!-- //modal-contact --> 
-	
-	<!-- footer -->
-	<div class="footer">
-		<div class="container">
-			<p>I'm not ashamed. I write pretty code, not websites.</p>
-			<p>Besides, a good dev doesn't reinvent tools that already work.</p>
-			<p>© 2016 Easy Resume. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
-		</div>
-	</div>
-	<!-- //footer --> 
+
 	
 	<!-- Bootstrap core JavaScript
     ================================================== -->
