substantial design improvements

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li><a href="#" data-toggle="modal" data-target="#skill" class="w3ls-hover"><span data-letters="Skills">Skills</span></a></li>
 						<li><a href="#" data-toggle="modal" data-target="#experience" class="w3ls-hover"><span data-letters="Experience">Experience </span></a></li>
 						<li><a href="#" data-toggle="modal" data-target="#education" class="w3ls-hover"><span data-letters="Education">Education </span></a></li>
-						<li><a href="#" data-toggle="modal" data-target="#work" class="w3ls-hover"><span data-letters="Play">Play</span></a></li>
+						<li><a href="#" data-toggle="modal" data-target="#work" class="w3ls-hover"><span data-letters="Portfolio">Portfolio</span></a></li>
 						<li><a href="#" data-toggle="modal" data-target="#contact" class="w3ls-hover"><span data-letters="Contact">Contact </span></a></li> 
 						<li><a href="./csaund_resume.pdf" data-toggle="modal" class="w3ls-hover"><span data-letters="Resume">Resume </span></a></li>
 						<!--<li><a class="w3ls-icon" href="./csaund_resume.pdf"><span class="glyphicon glyphicon-save"></span></a></li>-->
@@ -74,7 +74,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="modal-content"> 
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title">ABOUT ME</h4>
 				</div>
 				<div class="modal-body modal-spa">
 					<div class="about"> 
@@ -87,25 +86,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<ul class="address">
 								<li>
 									<ul class="agileits-address-text">
-										<li><b>PHONE </b></li>
+										<li><b>phone </b></li>
 										<li>+01 650 483 4727</li>
 									</ul>
 								</li>
 								<li>
 									<ul class="agileits-address-text">
-										<li><b>ADDRESS </b></li>
-										<li>21 Saint Mary Road, Cambridge, MA</li>
-									</ul>
-								</li>
-								<li>
-									<ul class="agileits-address-text">
-										<li><b>E-MAIL </b></li>
+										<li><b>email </b></li>
 										<li><a href="mailto:carolyn.saund@gmail.com"> carolyn.saund@gmail.com</a></li>
 									</ul>
 								</li>
 								<li>
 									<ul class="agileits-address-text">
-										<li><b>RESUME </b></li>
+										<li><b>resume </b></li>
 										<li><a href="./csaund_resume.pdf">find it here</a></li>
 									</ul>
 								</li>
@@ -130,7 +123,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="modal-content"> 
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title">My Skills</h4>
 				</div>
 				<div class="modal-body modal-spa">
 					<div class="skills"> 
@@ -200,7 +192,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="modal-content"> 
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title">My Experience</h4>
 				</div>
 				<div class="modal-body modal-spa">
 					<div class="experience w3-agileits-info">
@@ -260,7 +251,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="modal-content"> 
 				<div class="modal-header w3layouts">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title">My Qualification</h4>
 				</div>
 				<div class="modal-body modal-spa">
 					<div class="experience">  
@@ -303,8 +293,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title">My Play</h4>
-					<h5 class="modal-title">Get it? It's not my work.</h5>
 				</div>
 				<div class="modal-body modal-spa">
 					<div class="gallery">
@@ -324,7 +312,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<a href="images/g2.jpg" data-lightbox="example-set" data-title="Sed ut perspiciatis unde omnis iste natus error sit">
 										<img src="images/g2.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>Japan</h5>
+											<h5>Emotional Systems</h5>
 										</div>
 									</a>
 								</div>
@@ -334,7 +322,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<a href="images/g3.jpg" data-lightbox="example-set" data-title="Eaque ipsa quae ab illo inventore veritatis et quasi">
 										<img src="images/g3.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>New Zealand</h5>
+											<h5>Drosophila</h5>
 										</div>
 									</a>
 								</div>
@@ -344,7 +332,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<a href="images/g4.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley">
 										<img src="images/g4.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>Belize</h5>
+											<h5>The Neuron</h5>
 										</div>
 									</a>
 								</div>
@@ -354,47 +342,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									<a href="images/g5.jpg" data-lightbox="example-set" data-title="Sed ut perspiciatis unde omnis iste natus error sit">
 										<img src="images/g5.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>Montreal</h5>
+											<h5>The Cube</h5>
 										</div>
 									</a>
 								</div>
 							</div>
 							<div class="col-md-4 gallery-grids">
 								<div class="gallery-w3ls-hover">
-									<a href="images/g6.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley">
-										<img src="images/g6.jpg" class="img-responsive zoom-img" alt=""/>
+									<a href="images/g5.jpg" data-lightbox="example-set" data-title="Sed ut perspiciatis unde omnis iste natus error sit">
+										<img src="images/g5.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
-											<h5>Ireland</h5>
-										</div>
-									</a>
-								</div>
-							</div>
-							<div class="col-md-4 gallery-grids">
-								<div class="gallery-w3ls-hover">
-									<a href="images/g3.jpg" data-lightbox="example-set" data-title="Sed ut perspiciatis unde omnis iste natus error sit">
-										<img src="images/g3.jpg" class="img-responsive zoom-img" alt=""/>
-										<div class="view-caption">
-											<h5>Iceland</h5>
-										</div>
-									</a>
-								</div>
-							</div>
-							<div class="col-md-4 gallery-grids">
-								<div class="gallery-w3ls-hover">
-									<a href="images/g1.jpg" data-lightbox="example-set" data-title="Eaque ipsa quae ab illo inventore veritatis et quasi">
-										<img src="images/g1.jpg" class="img-responsive zoom-img" alt=""/>
-										<div class="view-caption">
-											<h5>---</h5>
-										</div>
-									</a>
-								</div>
-							</div>
-							<div class="col-md-4 gallery-grids">
-								<div class="gallery-w3ls-hover">
-									<a href="images/g2.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley">
-										<img src="images/g2.jpg" class="img-responsive zoom-img" alt=""/>
-										<div class="view-caption">
-											<h5>---</h5>
+											<h5>Everywear</h5>
 										</div>
 									</a>
 								</div>
