--- a/index.html
+++ b/index.html
@@ -309,8 +309,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 							<div class="col-md-4 gallery-grids">
 								<div class="gallery-w3ls-hover">
-									<a href="images/g2.jpg" data-lightbox="example-set" data-title="Sed ut perspiciatis unde omnis iste natus error sit">
-										<img src="images/g2.jpg" class="img-responsive zoom-img" alt=""/>
+									<!--- <a href="#" data-toggle="modal" data-target="#about" class="w3ls-hover"><span data-letters="About">About </span></a> -->
+									<a href="#" data-toggle="modal" data-target="#emotion" class="w3ls-hover" data-title="Emotional System">
+										<img a href="#" src="images/emotiongraph.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
 											<h5>Emotional Systems</h5>
 										</div>
@@ -414,7 +415,57 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 		</div>
 	</div>
-	<!-- //modal-contact --> 
+	<!-- //modal-contact -->
+
+	<!-- modal-about -->
+	<div class="modal fade modal-about" id="emotion" tabindex="-1" role="dialog">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				</div>
+				<div class="modal-body modal-spa">
+					<div class="emotion">
+						<div class="col-md-4 about-left ">
+							<img src="images/japan_bamboo.jpg" class="img-responsive" alt=""/>
+						</div>
+						<div class="col-md-8 about-right wthree">
+							<h3>Hello, I'm <span>Carolyn M. Saund</span></h3>
+							<h4>a.k.a. Caro </h4>
+							<ul class="address">
+								<li>
+									<ul class="agileits-address-text">
+										<li><b>phone </b></li>
+										<li>+01 650 483 4727</li>
+									</ul>
+								</li>
+								<li>
+									<ul class="agileits-address-text">
+										<li><b>email </b></li>
+										<li><a href="mailto:carolyn.saund@gmail.com"> carolyn.saund@gmail.com</a></li>
+									</ul>
+								</li>
+								<li>
+									<ul class="agileits-address-text">
+										<li><b>resume </b></li>
+										<li><a href="./csaund_resume.pdf">find it here</a></li>
+									</ul>
+								</li>
+							</ul>
+						</div>
+						<div class="clearfix"> </div>
+						<div class="about-text agileits-w3layouts">
+							<p> I recieved my B.S. in Computer Science and Cognitive
+								and Brain Sciences from Tufts University in May 2015. My main focus in both areas of study has primarily been <b>Machine Learning</b> and <b>Artificial Intelligence</b>, which I intend to continue in graduate studies. <br></p>
+							<p class="agile-br">I am motivated by passion. Whatever the task, being surrounded by passionate people brings out my most inspired and creative work. I love working in teams small enough to personally interact with each member every day, and take as easily to leading a project I care about as I do to following a team lead's vision.<br></p>
+							<p class="agile-br">I have also been described as an avid world traveller. For more about who I am and how I fill my time, check out how I <b>play</b> up above.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //modal-about -->
 
 	
 	<!-- Bootstrap core JavaScript
