--- a/index.html
+++ b/index.html
@@ -299,16 +299,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="gallery-row">
 							<div class="col-md-4 gallery-grids">
 								<div class="gallery-w3ls-hover">
-									<a href="slideshows/thainam.html" data-lightbox="example-set" data-title="I like backpacking.">
-										<img src="slideshows/img/vietnam/halongsunsetsmall.jpg" class="img-responsive zoom-img" alt=""/>
-										<div class="view-caption">
-											<h5>Thailand and Vietnam</h5>
-										</div>
-									</a>
-								</div>
-							</div>
-							<div class="col-md-4 gallery-grids">
-								<div class="gallery-w3ls-hover">
 									<!--- <a href="#" data-toggle="modal" data-target="#about" class="w3ls-hover"><span data-letters="About">About </span></a> -->
 									<a href="#" data-toggle="modal" data-target="#emotion" class="w3ls-hover" data-title="Emotional System">
 										<img a href="#" src="images/emotiongraph.jpg" class="img-responsive zoom-img" alt=""/>
@@ -354,6 +344,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<img src="images/g5.jpg" class="img-responsive zoom-img" alt=""/>
 										<div class="view-caption">
 											<h5>Everywear</h5>
+										</div>
+									</a>
+								</div>
+							</div>
+							<div class="col-md-4 gallery-grids">
+								<div class="gallery-w3ls-hover">
+									<a href="slideshows/thainam.html" data-lightbox="example-set" data-title="I like backpacking.">
+										<img src="slideshows/img/vietnam/halongsunsetsmall.jpg" class="img-responsive zoom-img" alt=""/>
+										<div class="view-caption">
+											<h5>Misc Art</h5>
 										</div>
 									</a>
 								</div>
@@ -426,14 +426,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="modal-body modal-spa">
 					<div class="emotion">
-						<div class="col-md-4 about-left ">
-							<img src="images/emotiongraph.jpg" class="img-responsive" alt=""/>
+						<div class="project-img ">
+						<img src="images/emotiongraph.jpg" class="img-responsive" alt=""/>
 						</div>
-						<div class="col-md-8 emotion-right wthree project-heading">
+						<div class="col-md-8 project-right wthree project-heading">
 							<h3>Bi-Axial Emotional System</span></h3>
 						</div>
 						<div class="clearfix"> </div>
-						<div class="emotion-text agileits-w3layouts project-text">
+						<div class="project-text agileits-w3layouts">
 							<p>
 							<h5>Introduction</h5>
 							This emotion system is meant to be an abstract representation of an agent's internal emotional state that is influenced with a combination of external input sensors and sentiment appraisal rules.
